--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
-title: dash
-author: GitHub User
-email: miguel-gonzalez@gmx.de
+title: /bin/Grizzz
+author: Grizzz
+email: nguyenngocquang700@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  
 show_excerpts: false # set to true to show excerpts on the homepage
 
 paginate: 1
@@ -20,18 +18,15 @@ dash:
   date_format: "%b %-d, %Y"
 
   disqus:
-    shortname: bitbrain-github-io
+    shortname: nguyenngocquang700.github.io
 
   # generate social links in footer
   # supported colors: green, red, orange, blue, cyan, pink, teal, yellow, indigo, purple
   social_links:
-    - url: https://twitter.com/bitbrain_
+    - url: https://twitter.com/Quangng20
       icon: twitter-square
       color: cyan
-    - url: https://bitbrain.itch.io
-      icon: itch-io
-      color: red
-    - url: https://github.com/bitbrain
+    - url: https://github.com/nguyenngocquang700
       icon: github-square
       color: purple
 
