--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: /bin/Grizzz
+title: $ /bin/Grizzz
 author: Grizzz
 email: nguyenngocquang700@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
