--- a/_includes/.travis.yml
+++ b/_includes/.travis.yml
@@ -1,4 +1,21 @@
 language: ruby
-rvm:
-  - 2.2
-  - jruby
+cache: bundler
+branches:
+  only:
+  - master
+before_install:
+- gem install bundler -v 2.0.1
+script:
+  - JEKYLL_ENV=production bundle exec jekyll build --destination site
+deploy:
+  repo: nguyenngocquang700/nguyenngocquang700.github.io
+  provider: pages
+  local-dir: ./site
+  target-branch: master
+  email: deploy@travis-ci.org
+  name: Deployment Bot
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN
+  keep-history: true
+  on:
+    branch: master
