--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: $ /bin/Grizzz
 author: Grizzz
 email: nguyenngocquang700@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
-  
+  Nếu ngày mai không đến...anh xin nói một lời yêu em...yêu say đắm như lần đầu tiên...
 show_excerpts: false # set to true to show excerpts on the homepage
 
 paginate: 1
@@ -23,12 +23,18 @@ dash:
   # generate social links in footer
   # supported colors: green, red, orange, blue, cyan, pink, teal, yellow, indigo, purple
   social_links:
-    - url: https://twitter.com/Quangng20
+    - url: https://twitter.com/Quangng20/
       icon: twitter-square
       color: cyan
-    - url: https://github.com/nguyenngocquang700
+    - url: https://github.com/nguyenngocquang700/
       icon: github-square
       color: purple
+    - url: https://facebook.com/qng20/
+      icon: facebook-square
+      color: blue
+    - url: https://instagram.com/hello.wangg/
+      icon: instagram-square
+      color: pink
 
   show_author: true
 
@@ -45,5 +51,5 @@ plugins:
  - jekyll/tagging
 
 # Replaces the default avatar provider (gravatar)
-#avatar_source: github
-#github_username: bitbrain
+avatar_source: github
+github_username: nguyenngocquang700
